--- a/.github/workflows/reusable-create.yml
+++ b/.github/workflows/reusable-create.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Set common variables
         uses: moderntribe/actions/utils/common-variables@v1
+        with:
+          app_name: ${{ inputs.app_name }}
 
       - name: Create review app ${{ inputs.review_app_name }}
         uses: moderntribe/actions/dokku/create-review-app@v1
