--- a/.github/workflows/deploy-review-app.yml
+++ b/.github/workflows/deploy-review-app.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   create_review_app:
     if: (github.event_name == 'pull_request' && github.event.action == 'opened' || github.event.action == 'synchronize')
-    uses: moderntribe/square-one/.github/workflows/reusable-create.yml@add_deploy_folder
+    uses: moderntribe/actions/dokku/workflows/create-review-app.yml@review_app_workflow
     with:
       # workflows don't support env
       app_name: sq1
