--- a/.github/workflows/deploy-review-app.yml
+++ b/.github/workflows/deploy-review-app.yml
@@ -4,16 +4,15 @@ on:
   pull_request:
     types: [ opened, closed, synchronize ]
 
-env:
-  APPNAME: sq1
-  SERVER: ${{ secrets.TEST_DOMAIN }}
+
+# workflows don't support env
+# so values are duplicated
 
 jobs:
   create_review_app:
     if: (github.event_name == 'pull_request' && github.event.action == 'opened' || github.event.action == 'synchronize')
     uses: moderntribe/actions/.github/workflows/create-review-app.yml@review_app_workflow
     with:
-      # workflows don't support env
       app_name: sq1
     secrets:
       github_pat_token: ${{ secrets.GH_BOT_TOKEN }}
@@ -25,7 +24,7 @@ jobs:
     with:
       app_name: sq1
       branch: ${{ github.event.pull_request.head.ref }}
-      # is_review_app: false
+      is_review_app: true
     secrets:
       github_pat_token: ${{ secrets.GH_BOT_TOKEN }}
       server: ${{ secrets.TEST_DOMAIN }}
