--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,12 @@
     "sort-packages": true,
     "preferred-install": {
       "*": "dist"
+    },
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "composer/installers": true,
+      "ffraenz/private-composer-installer": true,
+      "johnpbloch/wordpress-core-installer": true
     }
   },
   "description": "Modern Tribe's Square One WordPress setup",
