Add proxy_ssl_server_name on; for nginx image proxy to support Cloudflare domains

--- a/dev/docker/nginx/nginx.conf
+++ b/dev/docker/nginx/nginx.conf
@@ -20,6 +20,7 @@ server {
     # Replace "https://livedomain.tld" with your production/dev URL to pull assets from another server.
     location @images {
         resolver 1.1.1.1;
+        proxy_ssl_server_name on;
         proxy_pass https://livedomain.tld/$uri;
     }
 
