Add optimized opcache configuration

--- a/dev/docker/php/php-ini-overrides.ini
+++ b/dev/docker/php/php-ini-overrides.ini
@@ -8,6 +8,22 @@ error_log=/proc/1/fd/2
 upload_max_filesize=100M
 post_max_size=108M
 
+; opcache: https://www.php.net/manual/en/opcache.configuration.php
+opcache.revalidate_freq=2
+opcache.validate_timestamps=1
+
+; Increase these if your project has a lot of files
+opcache.max_accelerated_files=25000
+opcache.memory_consumption=128
+opcache.interned_strings_buffer=16
+
+; These improve performance, but can cause issues.
+; Comment out if you experience strange behaviour.
+opcache.use_cwd=0
+opcache.enable_file_override=1
+opcache.file_update_protection=0
+opcache.file_cache=/tmp
+
 ; xdebug
 xdebug.idekey="PHPSTORM"
 xdebug.mode=debug,profile,trace
