--- a/composer.json
+++ b/composer.json
@@ -43,10 +43,6 @@
     },
     {
       "type": "vcs",
-      "url": "git@github.com:msawicki/acf-menu-chooser.git"
-    },
-    {
-      "type": "vcs",
       "url": "git@github.com:moderntribe/tribe-acf-post-list-field.git"
     },
     {
@@ -72,7 +68,7 @@
       "type": "package",
       "package": {
         "name": "advanced-custom-fields/advanced-custom-fields-pro",
-        "version": "5.11.4",
+        "version": "5.12",
         "type": "wordpress-plugin",
         "dist": {
           "type": "zip",
@@ -95,7 +91,7 @@
     "johnpbloch/wordpress-core": "5.8.3",
     "johnpbloch/wordpress-core-installer": "2.0.*",
     "mailgun/mailgun-php": "^2.8",
-    "msawicki/acf-menu-chooser": "dev-master",
+    "moderntribe/acf-menu-chooser": "^1.1",
     "moderntribe/acf-image-select": "dev-master",
     "moderntribe/tribe-acf-post-list-field": "^2.0",
     "moderntribe/tribe-libs": "^3.4",
@@ -111,11 +107,11 @@
     "wpackagist-plugin/gravity-forms-wcag-20-form-fields": "1.7.2",
     "wpackagist-plugin/limit-login-attempts-reloaded": "2.23.2",
     "wpackagist-plugin/posts-to-posts": "1.6.6",
-    "wpackagist-plugin/redirection": "5.1.3",
+    "wpackagist-plugin/redirection": "5.2.3",
     "wpackagist-plugin/regenerate-thumbnails": "3.1.5",
-    "wpackagist-plugin/the-events-calendar": "5.12.2",
+    "wpackagist-plugin/the-events-calendar": "5.14.0.4",
     "wpackagist-plugin/user-switching": "1.5.8",
-    "wpackagist-plugin/wordpress-seo": "17.8",
+    "wpackagist-plugin/wordpress-seo": "18.2",
     "wpackagist-plugin/wp-tota11y": "1.2.0"
   },
   "require-dev": {
