Update static file extensions to include WOFF2 and WEBP.

--- a/.deploy/config/nginx.conf
+++ b/.deploy/config/nginx.conf
@@ -35,7 +35,7 @@ location /wp-content/ {
 
     try_files $uri $uri/ /index.php?$args;
 
-    location ~* \.(?:ico|css|js|gif|jpe?g|png|svg|eot|ttf|woff|mp4|m4v|mov|wmv|avi|mpg|ogv|3gp|3g2|flv|webm|aac|m4a|f4a|mp3|ogg|oga)$ {
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|svg|eot|ttf|woff2?|mp4|m4v|mov|wmv|avi|mpg|ogv|3gp|3g2|flv|webm|aac|m4a|f4a|mp3|ogg|oga|webp)$ {
         access_log off;
         log_not_found off;
         expires max;
