--- a/dev/docker/nginx/nginx.conf
+++ b/dev/docker/nginx/nginx.conf
@@ -56,7 +56,7 @@ server {
 
         try_files $uri $uri/ @rewrites;
 
-        location ~* \.(?:ico|css|js|gif|jpe?g|png|svg|eot|ttf|woff|mp4|m4v|mov|wmv|avi|mpg|ogv|3gp|3g2|flv|webm|aac|m4a|f4a|mp3|ogg|oga)$ {
+        location ~* \.(?:ico|css|js|gif|jpe?g|png|svg|eot|ttf|woff2?|mp4|m4v|mov|wmv|avi|mpg|ogv|3gp|3g2|flv|webm|aac|m4a|f4a|mp3|ogg|oga|webp)$ {
             try_files $uri =404;
             # If proxying files from an upstream (e.g., dev, production) server using @images, switch the above for
             # try_files $uri $uri/ @images;
