--- a/.github/workflows/dokku-deploy.yml
+++ b/.github/workflows/dokku-deploy.yml
@@ -15,6 +15,10 @@ on:
         required: false
         type: boolean
         description: Flag if this is a review app or not
+      pr_number:
+        required: false
+        type: string
+        description: Pull Request Number
     secrets:
       github_pat_token:
         required: true
