--- a/.github/workflows/dokku-deploy.yml
+++ b/.github/workflows/dokku-deploy.yml
@@ -44,6 +44,7 @@ jobs:
         with:
           app_name: ${{ inputs.app_name }}
           base_branch: ${{ inputs.branch }}
+          pr_number: ${{ inputs.pr_number }}
 
       - name: Setup SSH
         uses: moderntribe/actions/utils/ssh-agent@v1
