--- a/.github/workflows/deploy-review-app.yml
+++ b/.github/workflows/deploy-review-app.yml
@@ -22,7 +22,7 @@ jobs:
 
   deploy_review_app:
     if: (github.event_name == 'pull_request' && github.event.action == 'opened' || github.event.action == 'synchronize')
-    uses: moderntribe/square-one/.github/workflows/dokku-deploy.yml@main
+    uses: moderntribe/square-one/.github/workflows/dokku-deploy.yml@feature/fix-review-app-deploy
     with:
       app_name: sq1
       branch: ${{ github.event.pull_request.head.ref }}
