--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -43,18 +43,18 @@ jobs:
           rm -rf vendor/moderntribe/tribe-libs/.git
           rm -rf wp-content/plugins/panel-builder/.git
 
-      # Setup node version
-      - uses: actions/setup-node@v2
+      # Set up node version
+      - name: Set up node
+        uses: actions/setup-node@v2
         with:
           node-version-file: "${{ env.BUILD_FOLDER }}/.nvmrc"
-
-      # Cache node_modules TODO
+          cache: 'yarn'
 
       # Yarn Install and Build
       - name: Yarn install and build
         working-directory: ${{ env.BUILD_FOLDER }}
         run: |
-          yarn install
+          yarn install --prefer-offline
           npm run validate
           npm run server_dist
 
