--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -43,21 +43,18 @@ jobs:
           rm -rf vendor/moderntribe/tribe-libs/.git
           rm -rf wp-content/plugins/panel-builder/.git
 
-      # Setup node version
-      - name: Setup node version
-        id: nvm
-        run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
-      - uses: actions/setup-node@v2
+      # Set up node version
+      - name: Set up node
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
-
-      # Cache node_modules TODO
+          node-version-file: "${{ env.BUILD_FOLDER }}/.nvmrc"
+          cache: 'yarn'
 
       # Yarn Install and Build
       - name: Yarn install and build
         working-directory: ${{ env.BUILD_FOLDER }}
         run: |
-          yarn install
+          yarn install --prefer-offline
           npm run validate
           npm run server_dist
 
