--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -17,8 +17,9 @@ jobs:
         run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
-      - run: yarn install
+          node-version-file: '.nvmrc'
+          cache: 'yarn'
+      - run: yarn install --prefer-offline
       - uses: reviewdog/action-eslint@v1
         with:
           fail_on_error: true
