--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -31,7 +31,16 @@ jobs:
           path: ${{ env.BUILD_FOLDER }}
           ref: ${{github.ref}}
 
-      # Cache composer vendor folder TODO
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
 
       # Install composer: Add env for plugin keys, composer install, and cleanup
       - name: Install composer dependencies
