--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "js:admin:dev": "cross-env NODE_ENV=admindev npm run js:build",
     "js:theme:prod": "cross-env NODE_ENV=themeprod npm run js:build",
     "js:admin:prod": "cross-env NODE_ENV=adminprod npm run js:build",
-    "app:example": "cross-env NODE_ENV=example webpack-dev-server --hot --https --port 3000",
+    "app:example": "cross-env NODE_ENV=example webpack server",
     "test": "cross-env NODE_ENV=test jest --config jest.config.json"
   },
   "dependencies": {
@@ -200,7 +200,7 @@
     "webpack": "^5.3.2",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "^4.8.1",
     "webpack-merge": "^4.2.2",
     "webpack-merge-and-include-globally": "^2.1.20",
     "webpack-stream": "^6.1.2",
