Adds Recommended Extensions for VSCode

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ pimple.json
 
 # IDE generated files #
 ######################
-.vscode
+.vscode/*
+!.vscode/extensions.json
 
 # Vim generated files #
 #######################
