--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@arkweid/lefthook": "^0.7.5",
+    "@arkweid/lefthook": "0.7.5",
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.14.3",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
