[SQONE-609]: cleaned up css and added where selector to stylelint ignorePseudoClasses array

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -29,7 +29,7 @@
     } ],
     "selector-pseudo-element-colon-notation": "single",
     "selector-pseudo-class-no-unknown": [true, {
-      "ignorePseudoClasses": ["global"]
+      "ignorePseudoClasses": ["global", "where"]
     }],
     "value-no-vendor-prefix": true
   }
