--- a/composer.json
+++ b/composer.json
@@ -103,6 +103,7 @@
     "moderntribe/tribe-libs": "^3.4",
     "nickford/acf-swatch": "1.0.7",
     "php-di/php-di": "^6.0",
+    "php-ds/php-ds": "^1.4",
     "php-http/client-common": "^1.9.0",
     "php-http/curl-client": "^1.7",
     "roots/wp-password-bcrypt": "dev-master",
