--- a/composer.json
+++ b/composer.json
@@ -102,6 +102,7 @@
     "php-http/client-common": "^1.9.0",
     "php-http/curl-client": "^1.7",
     "roots/wp-password-bcrypt": "dev-master",
+    "sabre/cache": "^1.0",
     "sunra/php-simple-html-dom-parser": "1.5.2",
     "vlucas/phpdotenv": "^5.3",
     "wpackagist-plugin/configure-smtp": "3.1",
