--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -27,6 +27,7 @@ parameters:
 		- '/^Parameter #2 \$deprecated of function load_plugin_textdomain expects string, false given\.$/'
 		# WP-CLI accepts a class as callable
 		- '/^Parameter #2 \$callable of static method WP_CLI::add_command\(\) expects callable\(\): mixed, \S+ given\.$/'
+		- '#PHPDoc tag @throws with type .*? is not subtype of Throwable#'
 
 	checkAlwaysTrueStrictComparison: true
 
