--- a/composer.json
+++ b/composer.json
@@ -100,7 +100,7 @@
     "moderntribe/acf-menu-chooser": "^1.1",
     "moderntribe/square1-field-models": "dev-feature/color-swatch-model",
     "moderntribe/tribe-acf-post-list-field": "^2.0",
-    "moderntribe/tribe-libs": "^3.5",
+    "moderntribe/tribe-libs": "dev-feature/acf-with-field-prefix-trait as 3.5.0",
     "nickford/acf-swatch": "1.0.7",
     "php-di/php-di": "^6.0",
     "php-ds/php-ds": "^1.4",
