--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -12,6 +12,8 @@ parameters:
 	bootstrapFiles:
 		- vendor/php-stubs/wordpress-stubs/wordpress-stubs.php
 		- vendor/php-stubs/acf-pro-stubs/acf-pro-stubs.php
+	stubFiles:
+		- dev/stubs/wordpress-overrides.stub
 	tmpDir: .phpstan-cache/
 	reportUnmatchedIgnoredErrors: false
 	ignoreErrors:
