Back to properly versioned square1-field-models/tribe-libs now that they are officially released

--- a/composer.json
+++ b/composer.json
@@ -44,10 +44,6 @@
     },
     {
       "type": "vcs",
-      "url": "git@github.com:moderntribe/tribe-acf-post-list-field.git"
-    },
-    {
-      "type": "vcs",
       "url": "git@github.com:bordoni/phpass.git"
     },
     {
@@ -98,9 +94,8 @@
     "mailgun/mailgun-php": "^2.8",
     "moderntribe/acf-image-select": "dev-master",
     "moderntribe/acf-menu-chooser": "^1.1",
-    "moderntribe/square1-field-models": "dev-feature/color-swatch-model",
-    "moderntribe/tribe-acf-post-list-field": "^2.0",
-    "moderntribe/tribe-libs": "dev-feature/acf-with-field-prefix-trait as 3.5.0",
+    "moderntribe/square1-field-models": "^1.2",
+    "moderntribe/tribe-libs": "^3.5.1",
     "nickford/acf-swatch": "1.0.7",
     "php-di/php-di": "^6.0",
     "php-ds/php-ds": "^1.4",
