--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -12,6 +12,9 @@
     <!-- php -r 'echo PHP_VERSION_ID;' -->
     <config name="php_version" value="70407"/>
 
+	<!-- Fix WordPress's terrible typing breaking PHPCS -->
+	<config name="minimum_supported_wp_version" value="5.3.12"/>
+
     <!-- Ignore warnings, show progress of the run and show sniff names -->
     <arg value="nps"/>
 
