--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,6 @@
     }
   ],
   "config": {
-    "platform": {
-      "php": "7.4.7"
-    },
     "vendor-dir": "vendor",
     "sort-packages": true,
     "preferred-install": {
@@ -78,7 +75,7 @@
     }
   ],
   "require": {
-    "php": "^7.4",
+    "php": "^7.4 || ^8.0",
     "ext-exif": "*",
     "ext-gd": "*",
     "ext-imagick": "*",
@@ -88,19 +85,16 @@
     "gravityforms/gravityforms": "*",
     "guzzlehttp/psr7": "^1.4",
     "humanmade/s3-uploads": "2.2.1",
-    "johnbillion/extended-cpts": "^4.0",
+    "johnbillion/extended-cpts": "^5.0",
     "johnpbloch/wordpress-core": "5.9.3",
     "johnpbloch/wordpress-core-installer": "2.0.*",
-    "mailgun/mailgun-php": "^2.8",
     "moderntribe/acf-image-select": "dev-master",
     "moderntribe/acf-menu-chooser": "^1.1",
-    "moderntribe/square1-field-models": "^1.2",
-    "moderntribe/tribe-libs": "3.6.*",
+    "moderntribe/tribe-libs": "^4.0.3",
     "nickford/acf-swatch": "1.0.7",
-    "php-di/php-di": "^6.0",
     "php-ds/php-ds": "^1.4",
-    "php-http/client-common": "^1.9.0",
-    "php-http/curl-client": "^1.7",
+    "php-http/client-common": "^2.2",
+    "php-http/curl-client": "^2.2",
     "roots/wp-password-bcrypt": "dev-master",
     "sabre/cache": "^1.0",
     "sunra/php-simple-html-dom-parser": "1.5.2",
@@ -108,12 +102,12 @@
     "wpackagist-plugin/configure-smtp": "3.1",
     "wpackagist-plugin/disable-emojis": "1.7.4",
     "wpackagist-plugin/gravity-forms-wcag-20-form-fields": "1.7.2",
-    "wpackagist-plugin/limit-login-attempts-reloaded": "2.25.3",
+    "wpackagist-plugin/limit-login-attempts-reloaded": "2.25.4",
     "wpackagist-plugin/posts-to-posts": "1.7",
-    "wpackagist-plugin/redirection": "5.2.3",
+    "wpackagist-plugin/redirection": "5.3.2",
     "wpackagist-plugin/regenerate-thumbnails": "3.1.5",
-    "wpackagist-plugin/user-switching": "1.6.0",
-    "wpackagist-plugin/wordpress-seo": "19.3",
+    "wpackagist-plugin/user-switching": "1.7.0",
+    "wpackagist-plugin/wordpress-seo": "19.5.1",
     "wpackagist-plugin/wp-tota11y": "1.2.0"
   },
   "require-dev": {
@@ -125,20 +119,15 @@
     "codeception/module-phpbrowser": "^1.0",
     "codeception/module-webdriver": "^1.0",
     "codeception/util-universalframework": "^1.0",
-    "filp/whoops": "^2.2@dev",
     "larapack/dd": "^1.1",
     "lucatume/function-mocker": "~1.0",
     "lucatume/wp-browser": "^3.0.9",
     "mockery/mockery": "^1.3",
     "moderntribe/coding-standards": "^2.0",
-    "php-http/httplug": "^1.1",
+    "php-http/httplug": "^2.2",
     "php-stubs/acf-pro-stubs": "^5.12",
     "php-stubs/wordpress-tests-stubs": "^5.8",
     "phpstan/extension-installer": "^1.1",
-    "phpstan/phpstan": "^1.5",
-    "phpstan/phpstan-mockery": "^1.1",
-    "phpunit/phpunit": "^8.0 || ^9.0 <9.5",
-    "szepeviktor/phpstan-wordpress": "^1.0",
     "wp-cli/wp-cli": "^2.5.0"
   },
   "extra": {
