--- a/composer.json
+++ b/composer.json
@@ -111,6 +111,7 @@
     "wpackagist-plugin/wp-tota11y": "1.2.0"
   },
   "require-dev": {
+    "brain/monkey": "2.*",
     "codeception/codeception": "^4.0",
     "codeception/module-asserts": "^1.0",
     "codeception/module-cli": "^1.0",
@@ -120,9 +121,7 @@
     "codeception/module-webdriver": "^1.0",
     "codeception/util-universalframework": "^1.0",
     "larapack/dd": "^1.1",
-    "lucatume/function-mocker": "~1.0",
     "lucatume/wp-browser": "^3.0.9",
-    "mockery/mockery": "^1.3",
     "moderntribe/coding-standards": "^2.0",
     "php-http/httplug": "^2.2",
     "php-stubs/acf-pro-stubs": "^5.12",
