--- a/composer.json
+++ b/composer.json
@@ -127,6 +127,7 @@
     "php-stubs/acf-pro-stubs": "^5.12",
     "php-stubs/wordpress-tests-stubs": "^5.8",
     "phpstan/extension-installer": "^1.1",
+    "phpstan/phpstan-mockery": "^1.1",
     "szepeviktor/phpstan-wordpress": "^1.1",
     "wp-cli/wp-cli": "^2.5.0"
   },
