--- a/package.json
+++ b/package.json
@@ -108,7 +108,6 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@arkweid/lefthook": "0.7.5",
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.14.3",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
@@ -120,6 +119,7 @@
     "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "@evilmartians/lefthook": "^1.1.1",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
