[SQONE-698]: Ensure phpstan knows the prefix script exists

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -12,6 +12,7 @@ parameters:
 	bootstrapFiles:
 		- vendor/php-stubs/wordpress-stubs/wordpress-stubs.php
 		- vendor/php-stubs/acf-pro-stubs/acf-pro-stubs.php
+		- .lefthook/prepare-commit-msg/prefix-with-jira-ticket.php
 	stubFiles:
 		- dev/stubs/wordpress-overrides.stub
 	tmpDir: .phpstan-cache/
