Update required phpversion

--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,7 @@
     }
   ],
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": "7.4",
     "ext-exif": "*",
     "ext-gd": "*",
     "ext-imagick": "*",
