--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.16.3",
+    "@moderntribe/a11y-dialog": "^5.3.0",
     "@types/react": "^16.9.11",
     "@vimeo/player": "^2.15.3",
     "classnames": "^2.2.6",
@@ -86,7 +87,6 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
-    "mt-a11y-dialog": "^5.1.1",
     "object-hash": "^2.2.0",
     "object-to-formdata": "^2.1.2",
     "prop-types": "^15.7.2",
